Merging 393053 from maven-2.0.x branch, to fix some jdk5 method calls that crept in.
git-svn-id: https://svn.apache.org/repos/asf/maven/components/trunk@393059 13f79535-47bb-0310-9956-ffa450edef68